<resources>
    <string name="app_name">MyMovies</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="popularity">Popularity</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="item_main">Main</string>
    <string name="item_favorite">Favorite</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="movie_title">Movie title:</string>
    <string name="original_title">Original title:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="movie_description">Overview:</string>
</resources>
